<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="hello_world">First App!</string>
    <string name="action_settings">Settings</string>
    <string name="username_string">User Name</string>
    <string name="enter_username_hint">Enter User Name</string>
    <string name="password_string">Password</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="login_string">OK</string>
    <string name="title_activity_text">TextActivity</string>

    <string name="hello">Hello  User!!!!</string>


</resources>
